--- a/css/qky_stus.css
+++ b/css/qky_stus.css
@@ -11,9 +11,26 @@
 .zb_checks{top:40px;}
 /*增减学生*/
 .weui-header .weui-header-title .weui_input{ width:auto !important;}
-.weui_reg_wrp .stus_del{right:0;}
-.weui_reg_wrp{float: left;position: relative; margin-right: 9px; margin-bottom: 9px;width:50px;height:50px;}
+.weui_uploader_file .stus_del{right:5px;}
+.weui_uploader_dele_wrp{    float: left;
+    position: relative;
+    margin-right: 9px;
+    margin-bottom: 9px;
+    width: 77px;
+    height: 77px;
+    border: 1px solid #d9d9d9;}
+.weui_uploader_dele_wrp:after{width: 39.5px;
+    height: 2px;
+    content: " ";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+    background-color: #d9d9d9;
+}
 .wh_40{ width:40px !important; height:40px !important;}
+.wh_60{ width:60px !important; height:60px !important;}
 .l40{ line-height:40px;}
 .weui_cell img{width: 100%; max-height: 100%;vertical-align: top;}
 .p2 .icon_g{ margin-right:30px;}
