--- a/css/weui2.css
+++ b/css/weui2.css
@@ -2058,7 +2058,7 @@ weui-box*/
     background-color: #fff;
     border-radius: 2px;
     cursor: pointer;
-    margin: 10px 0;
+    margin: 12px 0;
     overflow: hidden;vertical-align: bottom;
 }
 .page-bd li.js-show .weui-flex {
@@ -2649,7 +2649,7 @@ button.weui-form-preview-btn {
   display: block;
 }
 .grid{position:relative;float:left;padding:20px 10px;width:33.33333333%;box-sizing:border-box;text-decoration:none}.grids-small .grid{width:25%;padding:15px 8px}.grid:before{content:" ";position:absolute;right:0;top:0;width:1px;height:100%;border-right:1px solid #d9d9d9;color:#d9d9d9;transform-origin:100% 0;transform:scaleX(0.5)}.grid:after{content:" ";position:absolute;left:0;bottom:0;width:100%;height:1px;border-bottom:1px solid #d9d9d9;color:#d9d9d9;-webkit-transform-origin:0 100%;transform-origin:0 100%;-webkit-transform:scaleY(0.5);transform:scaleY(0.5)}
-.weui-menu{position:fixed;bottom:0;left:0;right:0;height:50px;background:#fafafa;display:-webkit-box;display:-webkit-flex;display:flex;-webkit-flex-flow:row nowrap;flex-flow:row nowrap;border-top:1px solid #e0e0e0;outline:0;margin:0;padding:0;-webkit-box-pack:start;-webkit-justify-content:flex-start;justify-content:flex-start;-webkit-box-align:center;-webkit-align-items:center;align-items:center}.weui-menu-inner{border-left: 1px solid #e0e0e0;height:100%;width:100%;text-align:center;cursor:pointer;position:relative;user-select:none;-webkit-user-select:none}.weui-menu-inner:last-child{background-position:30px center}.weui-menu-inner span{line-height:50px}.weui-menu-inner ul{position:absolute;left:5px;right:5px;top:0;opacity:0;background:#fff;font-size:13px;border:1px solid #ccc;word-break:break-all;border-radius:7px;text-align:center;transition:all .3s;-webkit-transition:all .3s;list-style-type:none}.weui-menu-inner ul li{border-bottom:1px solid #ccc;height:40px;line-height:40px;width:auto}.weui-menu-inner ul li:last-child{border-bottom:0}.weui-menu-inner ul em{position:absolute;height:0;width:0;border:5px solid transparent;border-top-color:#fff;left:50%;bottom:-10px;transform:translateX(-50%);-webkit-transform:translateX(-50%)}
+.weui-menu{ z-index:9;position:fixed;bottom:0;left:0;right:0;height:50px;background:#fafafa;display:-webkit-box;display:-webkit-flex;display:flex;-webkit-flex-flow:row nowrap;flex-flow:row nowrap;border-top:1px solid #e0e0e0;outline:0;margin:0;padding:0;-webkit-box-pack:start;-webkit-justify-content:flex-start;justify-content:flex-start;-webkit-box-align:center;-webkit-align-items:center;align-items:center}.weui-menu-inner{border-left: 1px solid #e0e0e0;height:100%;width:100%;text-align:center;cursor:pointer;position:relative;user-select:none;-webkit-user-select:none}.weui-menu-inner:last-child{background-position:30px center}.weui-menu-inner span{line-height:50px}.weui-menu-inner ul{position:absolute;left:5px;right:5px;top:0;opacity:0;background:#fff;font-size:13px;border:1px solid #ccc;word-break:break-all;border-radius:7px;text-align:center;transition:all .3s;-webkit-transition:all .3s;list-style-type:none}.weui-menu-inner ul li{border-bottom:1px solid #ccc;height:40px;line-height:40px;width:auto}.weui-menu-inner ul li:last-child{border-bottom:0}.weui-menu-inner ul em{position:absolute;height:0;width:0;border:5px solid transparent;border-top-color:#fff;left:50%;bottom:-10px;transform:translateX(-50%);-webkit-transform:translateX(-50%)}
 .weui-menu-inner a{ color:#999;}.weui-menu-inner .weui_tabbar_item.weui_bar_item_on{ color:#28ce57;}
 .weui-slider {
   padding: 15px 18px;
