--- a/css/qky_grow.css
+++ b/css/qky_grow.css
@@ -39,4 +39,9 @@
 .page-bd li:first-child.weui_panel_bd{ margin-top:12px;}
 .weui_uploader_files .weui_uploader_file {background-size:contain;}
 /*一级二级指标宽度*/
-.wlev01{max-width:112px;}.wlev02{max-width:140px;}.wlev01,.wlev02{ display:inline-block;white-space:nowrap; overflow:hidden; text-overflow:ellipsis;}
+@media screen and ( max-width: 320px ) {.wlev01{max-width:112px;}.wlev02{max-width:140px;}}
+@media ( min-device-width:321px ) and ( max-width:360px ){.wlev01{max-width:130px;}.wlev02{max-width:150px;}}
+@media ( min-device-width:361px ) and ( max-width:380px ){.wlev01{max-width:150px;}.wlev02{max-width:160px;}.weui_media_box.weui_media_text h2.abs.f29{ font-size:36px !important;}}
+@media ( min-device-width:380px ) and ( max-width:414px ){.wlev01{max-width:160px;}.wlev02{max-width:170px;}.weui_media_box.weui_media_text h2.abs.f29{ font-size:40px !important;}}
+@media ( min-device-width:415px ){.wlev01{max-width:auto;}.wlev02{max-width:auto;}.weui_media_box.weui_media_text h2.abs.f29{ font-size:40px !important;}}
+.wlev01,.wlev02{ display:inline-block;white-space:nowrap; overflow:hidden; text-overflow:ellipsis;}
