--- a/css/qky_grow.css
+++ b/css/qky_grow.css
@@ -4,6 +4,12 @@
 创建作者：YHC
 ***/
 
+/*avalon隐藏元素*/
+.ms-controller{
+    visibility: hidden
+}
+
+
 /*s身份选择*/
 .roles_pic{ padding:3px; background:#fff; width:60px; height:60px;}
 /*下拉菜单*/
