--- a/css/qky_grow.css
+++ b/css/qky_grow.css
@@ -17,7 +17,7 @@
 .class_checks,.zb_checks{position:absolute;top:44px; height:auto; width:100%; background:#fff;}
 .zb_checks{top:40px;}
 .class_checks .weui_check_label{ font-size:14px;}
-.class_checks .weui_check_label,.zb_checks .weui_check_label{ padding-left:25px;}
+.class_checks .weui_check_label,.zb_checks .weui_check_label{ padding-left:2em;}
 /*增减学生*/
 .weui-header .weui-header-title .weui_input{ width:auto !important;}
 .weui_uploader_file .stus_del{right:5px;}
@@ -25,6 +25,7 @@
 .weui_uploader_dele_wrp:after{width: 39.5px; height: 2px; content: " "; position: absolute;top: 50%;left: 50%; -webkit-transform: translate(-50%,-50%);transform: translate(-50%,-50%);   background-color: #d9d9d9;}
 .wh_40{ width:40px !important; height:40px !important;}
 .wh_50{ width:50px !important; height:50px !important;}
+.wh_100{ width:100% !important; height:100% !important;}
 .l40{ line-height:40px;}
 .weui_cell img{width: 100%;height: 100%;vertical-align: top;}
 .p2 .icon_g{ margin-right:30px;}
@@ -39,7 +40,7 @@
 .weui_uploader_bd .weui_uploader_file{ margin:0 9px 9px 0;}
 /*二级指标评价*/
 .page-bd li.rel:first-child{ margin-top:-1px !important;}
-.page-bd li .js-category.wid60{ width:60%; padding:10px 0 10px 15px;}
+.page-bd li .js-category.wid60{ width:60%; padding:10px 0 10px 1em;}
 .page-bd li .l28{ height:28px; line-height:28px;}
 .page-bd li.rel .weui_cell .weui_cell_ft{right:10px;}
 
