--- a/css/qky_grow.css
+++ b/css/qky_grow.css
@@ -30,12 +30,15 @@
 .weui_cell img{width: 100%;height: 100%;vertical-align: top;}
 .p2 .icon_g{ margin-right:30px;}
 
-/*学生列表*/
+/*评价-学生列表*/
 .stus_list{ width:100%;top:0; left:0; height:100%; background:#ebebeb;}
 .stus_list .weui_cells_checkbox .weui_cell{ padding-right:30px;}
-.zmbox{ position:fixed; width:18px; top:0; right:0; padding:0 2 0 0; margin:58px 0 0 0; height:96%;}
-.zmbox .zm{ width:16px; display:block; height:16px; line-height:16px; margin-bottom:2px;font-size:12px; color:#999; text-align:center;-webkit-transition:all .4s ease;-moz-transition:all .4s ease;-o-transition:all .4s ease;transition:all .4s ease; }
-.zmbox .zm:hover{ transform:scale(1.2,1.2);-webkit-transform:scale(1.2,1.2);-moz-transform:scale(1.2,1.2); background:#28ce57; color:#fff; border-radius:50%;}
+.scroll { overflow-y: auto; -webkit-overflow-scrolling: touch;}
+.zmbox{ position:fixed; width:18px; top:0; right:0;margin:56px 0 0 0; height:96%;}
+.zmbox .zm,.zmbox .zm-s{ display:block;  margin-bottom:2px; color:#999; text-align:center;-webkit-transition:all .4s ease;-moz-transition:all .4s ease;-o-transition:all .4s ease;transition:all .4s ease;height:16px; line-height:16px;}
+.zmbox .zm{width:16px; font-size:12px; }
+.zmbox .zm-s{width:26px; font-size:10px;}
+.zmbox .zm:hover,.zmbox .zm-s:hover{ transform:scale(1.2,1.2);-webkit-transform:scale(1.2,1.2);-moz-transform:scale(1.2,1.2); background:#28ce57; color:#fff; border-radius:8px;}
 /*上传*/
 .weui_uploader_bd .weui_uploader_file{ margin:0 9px 9px 0;}
 /*二级指标评价*/
@@ -70,8 +73,24 @@
 .div_calendar p.weui_tabbar_label,.div_calendar .weui-reddot-s{ margin:0 auto;position: relative;display:block;line-height: 44px;  padding:0;}.div_calendar .weui-reddot-s:after {right:5px;top:13px;}
 .div_calendar .iblock.circle{ width:8px; height:8px;}
 /*通用提示页面*/
-.nor-tips{font-size:100px; line-height:100px;}
+.nor-tips{font-size:100px; line-height:100px; margin-top:20%; display:inline-block}
 
 /*学生身份 -评价*/
 .wb_arrow{ border-right: 1px solid #e0e0e0; border-top: 1px solid #e0e0e0; height:8px;width: 8px; margin:50px auto 0; transform: rotate(-135deg);-webkit-transform: rotate(-135deg);border-left:8px solid #fff; border-bottom:8px solid #fff;}
 .weui_tabbar_item.rel .wb_arrow{ right:-10px; top:-25px;}
+
+/*报告书-学生列表*/
+.rep_users.placeholder{ height:auto; line-height:inherit;}
+@media screen and ( max-width: 320px ) {.rep_users .pics{ width:58px; height:58px;}}
+@media ( min-device-width:321px ) and ( max-width:380px ){.rep_users .pics{ width:68px; height:68px;}}
+@media ( min-device-width:381px ) and ( max-width:414px ){.rep_users .pics{ width:78px; height:78px;}}
+@media ( min-device-width:415px ){.rep_users .pics{ width:88px; height:88px;}}
+.zmbox.grade-l{ left:3px; height:80%;}
+.zmbox.grade-l .grade-cell{ height:7%; display:inline-block;}
+.zmbox.grade-l .grade-cell .zm-s{ border:1px solid #e0e0e0; background:#f9f9f9; border-radius:4px; padding:0 2px; /*border:1px solid #28ce57; color:#28ce57;*/}
+.zmbox.grade-l .grade-cell .zm-s:hover{ transform:scale(1.2,1.2);-webkit-transform:scale(1.2,1.2);-moz-transform:scale(1.2,1.2); background:#28ce57; color:#fff; border-radius:8px;}
+/*历史报告书*/
+.grade_line{ border-left:2px solid #e0e0e0; height:100%; left:18px; width:0;}
+.rep_cell{ height:30px; padding:35px 0 25px 10px;}
+.rep_icon{ left:50%; margin-left:-45px;top:50%; margin-top:-45px;}
+.rep_cell .rep_icon .title{ left:20px; width:60px;top:15px;}
