--- a/css/qky_grow.css
+++ b/css/qky_grow.css
@@ -37,7 +37,7 @@
 .zmbox{ position:fixed; width:18px; top:0; right:0;margin:56px 0 0 0; height:96%;}
 .zmbox .zm,.zmbox .zm-s{ display:block;  margin-bottom:2px; color:#999; text-align:center;-webkit-transition:all .4s ease;-moz-transition:all .4s ease;-o-transition:all .4s ease;transition:all .4s ease;height:16px; line-height:16px;}
 .zmbox .zm{width:16px; font-size:12px; }
-.zmbox .zm-s{width:26px; font-size:10px;}
+.zmbox .zm-s{width:26px; font-size:10px; line-height:18px;}
 .zmbox .zm:hover,.zmbox .zm-s:hover{ transform:scale(1.2,1.2);-webkit-transform:scale(1.2,1.2);-moz-transform:scale(1.2,1.2); background:#28ce57; color:#fff; border-radius:8px;}
 /*上传*/
 .weui_uploader_bd .weui_uploader_file{ margin:0 9px 9px 0;}
@@ -86,8 +86,8 @@
 @media ( min-device-width:381px ) and ( max-width:414px ){.rep_users .pics{ width:78px; height:78px;}}
 @media ( min-device-width:415px ){.rep_users .pics{ width:88px; height:88px;}}
 .zmbox.grade-l{ left:3px; height:80%;}
-.zmbox.grade-l .grade-cell{ height:7%; display:inline-block;}
-.zmbox.grade-l .grade-cell .zm-s{ border:1px solid #e0e0e0; background:#f9f9f9; border-radius:4px; padding:0 2px; /*border:1px solid #28ce57; color:#28ce57;*/}
+.zmbox.grade-l .grade-cell{ height:6.5%; display:inline-block;}
+.zmbox.grade-l .grade-cell .zm-s{ border:1px solid #e0e0e0; background:#f9f9f9; border-radius:4px; padding:0 2px;}
 .zmbox.grade-l .grade-cell .zm-s:hover{ transform:scale(1.2,1.2);-webkit-transform:scale(1.2,1.2);-moz-transform:scale(1.2,1.2); background:#28ce57; color:#fff; border-radius:8px;}
 /*历史报告书*/
 .grade_line{ border-left:2px solid #e0e0e0; height:100%; left:18px; width:0;}
