--- a/css/qky_grow.css
+++ b/css/qky_grow.css
@@ -81,9 +81,9 @@
 
 /*报告书-学生列表*/
 .rep_users.placeholder{ height:auto; line-height:inherit;}
-@media screen and ( max-width: 320px ) {.rep_users .pics{ width:58px; height:58px;}}
-@media ( min-device-width:321px ) and ( max-width:380px ){.rep_users .pics{ width:68px; height:68px;}}
-@media ( min-device-width:381px ) and ( max-width:414px ){.rep_users .pics{ width:78px; height:78px;}}
+@media screen and ( max-width: 320px ) {.rep_users .pics{ width:50px; height:50px;}.weui-header .weui-header-title, .weui-header h1{ font-size:17px;}}
+@media ( min-device-width:321px ) and ( max-width:380px ){.rep_users .pics{ width:60px; height:60px;}}
+@media ( min-device-width:381px ) and ( max-width:414px ){.rep_users .pics{ width:70px; height:70px;}}
 @media ( min-device-width:415px ){.rep_users .pics{ width:88px; height:88px;}}
 .zmbox.grade-l{ left:3px; height:80%;}
 .zmbox.grade-l .grade-cell{ height:6%; display:inline-block;}
@@ -94,3 +94,4 @@
 .rep_cell{ height:30px; padding:35px 0 25px 10px;}
 .rep_icon{ left:50%; margin-left:-45px;top:50%; margin-top:-45px;}
 .rep_cell .rep_icon .title{ left:20px; width:60px;top:15px;}
+.abs.g-anchor{ left:0;top:-54px;}
