--- a/css/qky_grow.css
+++ b/css/qky_grow.css
@@ -95,3 +95,13 @@
 .rep_icon{ left:50%; margin-left:-45px;top:50%; margin-top:-45px;}
 .rep_cell .rep_icon .title{ left:20px; width:60px;top:15px;}
 .abs.g-anchor{ left:0;top:-54px;}
+/*报告书详情*/
+/*背景*/
+.bar {width:100%; height:20px;background-color:#f00;}
+.box{ width:50%; height:20px;}
+.b1{  border-radius: 0 0 40%/20px 0;  background-color:#fff; border-bottom:3px solid #ff0}
+.b2{  border-radius: 0 0 0 70%/70px;  background-color:#fff; border-bottom:3px solid #ff0}
+.b3{  border-radius: 50% 0 0 0;  background-color:red;}
+.b4{  border-radius: 0 50% 0 0;  background-color: red;}
+.box5{  width:100%; height:100px;  background-color: red;}
+.rep-det_bg{transform:rotate(180deg);-ms-transform:rotate(180deg);-moz-transform:rotate(180deg);-webkit-transform:rotate(180deg); -o-transform:rotate(180deg);}
