--- a/css/qky_grow.css
+++ b/css/qky_grow.css
@@ -123,5 +123,4 @@
 /*表格内容*/
 .rep-d_form-bor{ border-radius:12% 16% 12% 13%; width:98%;}
 .rep-d_form{ border-radius: 15% 17% 10% 10%;}
-@media screen and (-webkit-min-device-pixel-ratio: 2){.rep-d_form .weui-table tr:last-child td:last-child:after, .weui-table tr:last-child th:last-child:after {
-    background-image: none}}
+@media screen and (-webkit-min-device-pixel-ratio: 2){.rep-d_form .weui-table tr:last-child td:last-child:after, .weui-table tr:last-child th:last-child:after{background-image: none}}
