--- a/css/qky_grow.css
+++ b/css/qky_grow.css
@@ -120,7 +120,9 @@
 .ribbon .ribbon-content:before,.ribbon .ribbon-content:after {content: "";position: absolute;display: block;border-style: solid;border-color: #cc5701 transparent transparent transparent;bottom: -0.6rem;}
 .ribbon .ribbon-content:before {left: 0;border-width: 0.6rem 0 0 0.6rem;}
 .ribbon .ribbon-content:after {right: 0;border-width: 0.6rem 0.6rem 0 0;}
-/*表格内容*/
+/*表格内容0*/
 .rep-d_form-bor{ border-radius:12% 16% 12% 13%; width:98%;}
 .rep-d_form{ border-radius: 15% 17% 10% 10%;}
-@media screen and (-webkit-min-device-pixel-ratio: 2){.rep-d_form .weui-table tr:last-child td:last-child:after, .weui-table tr:last-child th:last-child:after{background-image: none}}
+@media screen and (-webkit-min-device-pixel-ratio: 2) {
+	.rep-d_form .weui-table tr:last-child td:last-child:after, .weui-table tr:last-child th:last-child:after{background-image: none}
+}
