--- a/css/qky_grow.css
+++ b/css/qky_grow.css
@@ -39,6 +39,9 @@
 .zmbox .zm{width:15px; font-size:11px; position:relative}
 .zmbox .zm-s{width:26px; font-size:10px; line-height:18px;}
 .zmbox .zm:hover,.zmbox .zm-s:hover{ transform:scale(1.2,1.2);-webkit-transform:scale(1.2,1.2);-moz-transform:scale(1.2,1.2); background:#28ce57; color:#fff; border-radius:8px;}
+.weui-header .weui-header-right .weui_btn.weui_btn_mini {
+    margin-top:8px; height:24px; line-height:24px; padding:0 8px;
+}
 /*上传*/
 .weui_uploader_bd .weui_uploader_file{ margin:0 9px 9px 0;}
 /*二级指标评价*/
