--- a/css/qky_grow.css
+++ b/css/qky_grow.css
@@ -96,6 +96,7 @@
 .zmbox.grade-l .grade-cell{ height:6%; display:inline-block;}
 .zmbox.grade-l .grade-cell .zm-s{ border:1px solid #e0e0e0; background:#f9f9f9; border-radius:4px; padding:0 2px;}
 .zmbox.grade-l .grade-cell .zm-s:hover{ transform:scale(1.2,1.2);-webkit-transform:scale(1.2,1.2);-moz-transform:scale(1.2,1.2); background:#28ce57; color:#fff; border-radius:8px;}
+.cell-rep_users{ width:25%; float:left; margin:5px auto;}
 /*历史报告书*/
 .grade_line{ border-left:2px solid #e0e0e0; height:100%; left:18px; width:0;}
 .rep_cell{ height:30px; padding:35px 0 25px 10px;}
