--- a/icon_font/iconfont.css
+++ b/icon_font/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1490596018190'); /* IE9*/
-  src: url('iconfont.eot?t=1490596018190#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1490596018190') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1490596018190') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1490596018190#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1490867392141'); /* IE9*/
+  src: url('iconfont.eot?t=1490867392141#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1490867392141') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1490867392141') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1490867392141#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -14,6 +14,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.icon-shanchu:before { content: "\e600"; }
 
 .icon-list:before { content: "\e64d"; }
 
@@ -86,6 +88,4 @@
 .icon-zanwujilu:before { content: "\e633"; }
 
 .icon-tongji1:before { content: "\e612"; }
-
-.icon-xueqiguanli:before { content: "\e600"; }
 
