--- a/css/qky_grow.css
+++ b/css/qky_grow.css
@@ -90,7 +90,7 @@
 .weui_tabbar_item.rel .wb_arrow{ right:-10px; top:-25px;}
 
 /*报告书*/
-.rep_users.placeholder{ height:auto; line-height:inherit;}
+.rep_users.placeholder{ height:auto; line-height:inherit; margin:5px 0;}
 @media screen and ( max-width: 320px ) {.rep_users .pics{ width:44px; height:44px;}.weui-header .weui-header-title, .weui-header h1{ font-size:17px;}
 .report_pers .user-pic{ width:78px; height:78px;}/*个人信息*/}
 @media ( min-device-width:321px ) and ( max-width:380px ){.rep_users .pics{ width:54px; height:54px;}
